--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>API</title>
 </head>
 <body>
- <h1>Learning API ifs fun with Giphy API </h1>
+ <h1>Learning API is fun with Giphy API </h1>
 
  <script src="script.js"></script>
 </body>
